@@ -1,49 +1,13 @@
-% tex tex4ht-htcmd   or   ht tex tex4ht-htcmd
+% $Id$
+%       tex tex4ht-htcmd
+% or ht tex tex4ht-htcmd
 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% tex4ht-htcmd.tex                                       %
-% Copyright (C) 2000--            Eitan M. Gurari        %
-%                                                        %
-% This work may be distributed and/or modified under the %
-% conditions of the LaTeX Project Public License, either %
-% version 1.3 of this license or (at your option) any    %
-% later version. The latest version of this license is   %
-% in                                                     %
-%   http://www.latex-project.org/lppl.txt                %
-% and version 1.3 or later is part of all distributions  %
-% of LaTeX version 2003/12/01 or later.                  %
-%                                                        %
-% This work has the LPPL maintenance status "maintained".%
-%                                                        %
-% This Current Maintainer of this work                   %
-% is the TeX4ht Project.                                 %
-%                                                        %
-% If you modify this file your changing the signature    %
-% in \message{(signature)} below will be appreciated.    %
-%                                                        %
-%                                        tex4ht@tug.org  %
-%                             http://www.tug.org/tex4ht  %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
-\message{(<signature>)}
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 1996--2009 Eitan M. Gurari
+% Released under LPPL 1.3c+.
+% See tex4ht-cpright.tex for license text.
 
-
-\newcount\tmpcnt  \tmpcnt\time  \divide\tmpcnt  60
-\edef\temp{\the\tmpcnt}
-\multiply\tmpcnt  -60 \advance\tmpcnt  \time
-
-% \edef\version{\the\year-\ifnum \month<10 0\fi
-%   \the\month-\ifnum \day<10 0\fi\the\day
-%    -\ifnum \temp<10 0\fi \temp
-%    :\ifnum \tmpcnt<10 0\fi\the\tmpcnt}
-
-\edef\version{Version 1.1}
-
-\def\CopyYear.#1.{%
-   \ifnum #1=\year #1\space\space\space\space\space\space
-    \else          #1--\the\year\fi
-}
-
-
+\input common
 \input tex4ht.sty    
 
 \Preamble{xhtml,th4,sections+,xhtml}\EndPreamble    
@@ -51,6 +15,7 @@
    \input ProTex.sty
    \AlProTex{c,<<<>>>,`,title,list,_^}
 
+%\input tex4ht-cpright.tex (see below)
 
 \Comment{   
 }{}
@@ -81,45 +46,22 @@
    \catcode`\^^M=5 \catcode`\@=12 \catcode`\#=6 \catcode`\^=13
 
 
-
-
 \let\'=\Verb
 \def\`{\expandafter\expandafter\expandafter\qts\Verb}
 \def\qts#1{`#1\aftergroup'}
 
 \def\FTP{http://www.cse.ohio-state.edu/\string~gurari/tpf/}
 
+\input tex4ht-cpright
 
  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 \<htcmd.c\><<<
-/**********************************************************/
-/* htcmd.c                                   `version */
-/* Copyright (C) `CopyYear.1996.    Eitan M. Gurari            */
-/*                                                        */
-/* This work may be distributed and/or modified under the */
-/* conditions of the LaTeX Project Public License, either */
-/* version 1.3 of this license or (at your option) any    */
-/* later version. The latest version of this license is   */
-/* in                                                     */
-/*   http://www.latex-project.org/lppl.txt                */
-/* and version 1.3 or later is part of all distributions  */
-/* of LaTeX version 2003/12/01 or later.                  */
-/*                                                        */
-/* This work has the LPPL maintenance status "maintained".*/
-/*                                                        */
-/* This Current Maintainer of this work                   */
-/* is the TeX4ht Project.                                 */
-/*                                                        */
-/* If you modify this program your changing its signature */
-/* with a directive of the following form will be         */
-/* appreciated.                                           */
-/*      #define PLATFORM "signature"                      */
-/*                                                        */
-/*                                        tex4ht@tug.org  */
-/*                             http://www.tug.org/tex4ht  */
-/**********************************************************/
+/* htcmd.c (`version), generated from `jobname.tex
+   Copyright (C) 2009, 2010 TeX Users Group
+   Copyright (C) `CopyYear.1996. Eitan M. Gurari
+   `<TeX4ht copyright`> */
 `<htcmd.h`>
 `<defines`>
 `<vars`>
@@ -852,4 +794,3 @@ static void strct( str1, str2 )
 
 
 \bye
-
